[package]
name = "util_macros-gpui-standalone"
version = "1.5.4"
license = "Apache-2.0"
description = "Utility macros for Zed"
edition = "2024"
repository = "https://github.com/zed-industries/zed"

[lib]
path = "src/util_macros.rs"
proc-macro = true
doctest = false
name = "util_macros"

[features]
perf-enabled = []

[dependencies]
perf = {package = "perf-gpui-standalone", version = "1.5.4"}
quote = "^1.0.9"
syn = {version = "^2.0.101", features = ["full", "extra-traits", "visit-mut"]}
